--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -98,8 +98,8 @@ Firstly, we can inspect the survival data for consistency between years of the r
 ### Functional form of age
 
 ```{r ageform2, fig.width = 7, fig.height = 4, error = TRUE}
-#par(mfrow=c(1,2))
-#functional_form_age(registry_data_r)
+par(mfrow=c(1,2))
+functional_form_age(Surv(time, status) ~ age(age), registry_data_r)
 ```
 
 ### Population survival
