--- a/changes_sjf.rmd
+++ b/changes_sjf.rmd
@@ -156,3 +156,28 @@ test_output(functional_form_age_current_output, functional_form_age_dev)
 ```
 
 Although there is a failure here, the output from coxph looks exactly the same. 
+
+## survival_modelling_diagnostics
+
+```{r check_survival_modelling_diagnostics_age}
+survival_modelling_diagnostics_dev <- function() {
+  par(mfrow=c(2,2))
+  survival_modelling_diagnostics(Surv(time, status) ~ age(age) + sex(sex) + entry(entrydate),
+                                 registry_data, ages = c(55, 65, 75, 85, 100), 
+                                 start = "2004-09-01", num_years = 9)
+}
+```
+
+```{r check_survival_modelling_diagnostics_current}
+survival_modelling_diagnostics_current_output <- function() {
+  par(mfrow=c(2,2))
+  survival_modelling_diagnostics_current(registry_data, ages = c(55, 65, 75, 85, 100), 
+                                         registry_years, registry_start_year, registry_end_year)
+}
+```
+
+```{r check_survival_modelling_diagnostics_comp, message=T, cache=TRUE}
+test_output(survival_modelling_diagnostics_current_output, survival_modelling_diagnostics_dev)
+```
+
+As in `functional_form_age()`, although there is a failure here, the output looks exactly the same. 
