--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -84,7 +84,7 @@ Firstly, we can inspect the survival data for consistency between years of the r
 
 ```{r survivaldiag, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
 par(mfrow=c(2,2))
-survival_modelling_diagnostics(Surv(time, status) ~ age(age) + sex(sex) + entry(entrydate),
+survival_modelling_diagnostics(Surv(time, status) ~ age(age) + entry(entrydate),
                                registry_data, ages = c(55, 65, 75, 85, 100), 
                                start = "2004-09-01", num_years = 9)
 ```
