--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -82,7 +82,7 @@ meanIR(registry_data$entrydate, population_size = 3500000,
 
 Firstly, we can inspect the survival data for consistency between years of the registry and with a Cox Proportional Hazards model using `survival_modelling_diagnostics`:
 
-```{r survivaldiag, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
+```{r survivaldiag, fig.width = 7, fig.height = 7}
 par(mfrow=c(2,2))
 survival_modelling_diagnostics(Surv(time, status) ~ age(age) + entry(entrydate),
                                registry_data, ages = c(55, 65, 75, 85, 100), 
