--- a/changes_sjf.rmd
+++ b/changes_sjf.rmd
@@ -162,7 +162,7 @@ Although there is a failure here, the output from coxph looks exactly the same.
 ```{r check_survival_modelling_diagnostics_age}
 survival_modelling_diagnostics_dev <- function() {
   par(mfrow=c(2,2))
-  survival_modelling_diagnostics(Surv(time, status) ~ age(age) + entry(entrydate),
+  survival_modelling_diagnostics_sim(Surv(time, status) ~ age(age) + entry(entrydate),
                                  registry_data, ages = c(55, 65, 75, 85, 100), 
                                  start = "2004-09-01", num_years = 9)
 }
@@ -180,8 +180,26 @@ survival_modelling_diagnostics_current_output <- function() {
 }
 ```
 
-```{r check_survival_modelling_diagnostics_comp, message=T}
+```{r check_survival_modelling_diagnostics_comp, message=T, cache=TRUE}
 test_output(survival_modelling_diagnostics_current_output, survival_modelling_diagnostics_dev)
 ```
 
-As in `functional_form_age()`, although there is a failure here, the output looks exactly the same. 
+Here the output looks different; we seem to have lost a year of survival data.
+
+## sim_check
+
+```{r check_sim_check}
+sim_check_dev <- function() {
+  sim_check(incidence(registry_data$entrydate))
+}
+```
+
+```{r check_sim_check_current}
+sim_check_current_output <- function() {
+  sim_check_current(incidence(registry_data$entrydate))
+}
+```
+
+```{r check_sim_check_comp, message=T}
+test_output(sim_check_current_output, sim_check_dev)
+```
