--- a/vignettes/prevR-vignette-short.Rmd
+++ b/vignettes/prevR-vignette-short.Rmd
@@ -58,7 +58,7 @@ sim_check(raw_incidence)
 ```
 
 ```{r, fig.width = 7, fig.height = 7, include = TRUE, results="hide"}
-par(mfrow=c(2,2))
+#par(mfrow=c(2,2))
 smoothed_incidence(registry_data$entrydate, start_date="2004-01-30", num_years=9)
 ```
 
@@ -83,7 +83,7 @@ meanIR(registry_data$entrydate, population_size = 3500000,
 Firstly, we can inspect the survival data for consistency between years of the registry and with a Cox Proportional Hazards model using `survival_modelling_diagnostics`:
 
 ```{r survivaldiag, fig.width = 7, fig.height = 7}
-par(mfrow=c(2,2))
+#par(mfrow=c(2,2))
 survival_modelling_diagnostics(Surv(time, status) ~ age(age) + entry(entrydate),
                                registry_data, ages = c(55, 65, 75, 85, 100), 
                                start = "2004-09-01", num_years = 9)
